delivery-together-score-api/kubernetes/develop/k8s-deployments-dev.yaml
###################################
# delivery-together-score-api
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-together-score-api
  labels:
    app: delivery-together-score-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery-together-score-api
  template:
    metadata:
      labels:
        app: delivery-together-score-api
    spec:
      containers:
        - name: delivery-together-score-api
          image: caprilespe/delivery-together-post-api:1.0.0
          ports:
            - containerPort: 3001
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: delivery-together-score-service
spec:
  type: ClusterIP
  selector:
    app: delivery-together-score-api
  ports:
    - protocol: TCP
      port: 3004
      targetPort: 3004
---
###################################
# delivery-together-user-api
###################################

apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-together-user-api
  labels:
    app: delivery-together-user-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery-together-user-api
  template:
    metadata:
      labels:
        app: delivery-together-user-api
    spec:
      containers:
        - name: delivery-together-user-api
          image: caprilespe/delivery-together-user-api:1.0.0
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: delivery-together-user-service
spec:
  type: ClusterIP
  selector:
    app: delivery-together-user-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
###################################
# delivery-together-db
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-together-db
  labels:
    app: delivery-together-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery-together-db
  template:
    metadata:
      labels:
        app: delivery-together-db
    spec:
      containers:
        - name: delivery-together-db
          image: postgres:latest
          ports:
            - containerPort: 5432
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: delivery-together-db
spec:
  type: NodePort
  selector:
    app: delivery-together-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 31010
